// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decode bit-depth-01 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  1,
  1,
  3,
  0,
  0,
  0,
  37,
  219,
  86,
  202,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  3,
  80,
  76,
  84,
  69,
  0,
  0,
  0,
  167,
  122,
  61,
  218,
  0,
  0,
  0,
  10,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  96,
  0,
  0,
  0,
  2,
  0,
  1,
  72,
  175,
  164,
  113,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`decode bit-depth-02 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  2,
  2,
  3,
  0,
  0,
  0,
  15,
  216,
  229,
  183,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  12,
  80,
  76,
  84,
  69,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  255,
  255,
  255,
  251,
  0,
  96,
  246,
  0,
  0,
  0,
  4,
  116,
  82,
  78,
  83,
  255,
  255,
  255,
  127,
  128,
  144,
  197,
  89,
  0,
  0,
  0,
  12,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  100,
  96,
  100,
  0,
  0,
  0,
  10,
  0,
  3,
  187,
  36,
  1,
  108,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`decode chunk-gMMA 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  16,
  0,
  0,
  0,
  0,
  6,
  129,
  249,
  107,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  0,
  136,
  184,
  189,
  197,
  73,
  176,
  0,
  0,
  1,
  82,
  73,
  68,
  65,
  84,
  120,
  156,
  181,
  149,
  187,
  10,
  194,
  48,
  20,
  134,
  27,
  172,
  138,
  46,
  86,
  28,
  186,
  136,
  208,
  209,
  39,
  208,
  119,
  16,
  95,
  67,
  240,
  5,
  220,
  156,
  5,
  95,
  195,
  71,
  112,
  18,
  156,
  165,
  75,
  113,
  18,
  71,
  197,
  65,
  16,
  17,
  188,
  130,
  119,
  37,
  132,
  32,
  255,
  73,
  173,
  28,
  138,
  103,
  8,
  124,
  63,
  52,
  253,
  78,
  154,
  164,
  226,
  245,
  178,
  160,
  132,
  64,
  246,
  125,
  228,
  74,
  5,
  217,
  126,
  60,
  48,
  168,
  215,
  173,
  200,
  162,
  47,
  16,
  151,
  11,
  6,
  205,
  38,
  114,
  163,
  193,
  52,
  200,
  229,
  152,
  6,
  135,
  3,
  6,
  221,
  46,
  114,
  173,
  198,
  52,
  200,
  102,
  153,
  6,
  155,
  13,
  6,
  189,
  30,
  114,
  181,
  250,
  195,
  224,
  126,
  199,
  32,
  157,
  102,
  26,
  44,
  151,
  24,
  12,
  6,
  200,
  229,
  50,
  211,
  32,
  149,
  98,
  26,
  204,
  102,
  24,
  4,
  1,
  114,
  177,
  200,
  52,
  72,
  38,
  153,
  6,
  211,
  41,
  6,
  243,
  57,
  114,
  62,
  255,
  111,
  131,
  241,
  24,
  131,
  253,
  30,
  153,
  126,
  86,
  195,
  224,
  118,
  139,
  105,
  48,
  26,
  145,
  25,
  109,
  228,
  231,
  147,
  105,
  144,
  201,
  32,
  211,
  227,
  110,
  24,
  12,
  135,
  24,
  184,
  46,
  242,
  233,
  196,
  52,
  160,
  45,
  208,
  162,
  6,
  246,
  245,
  202,
  155,
  128,
  222,
  161,
  95,
  13,
  60,
  207,
  178,
  62,
  219,
  92,
  30,
  106,
  117,
  189,
  26,
  6,
  116,
  145,
  18,
  9,
  57,
  150,
  74,
  139,
  133,
  30,
  229,
  227,
  242,
  97,
  53,
  26,
  6,
  225,
  45,
  232,
  67,
  174,
  200,
  247,
  35,
  12,
  206,
  231,
  48,
  3,
  89,
  174,
  187,
  90,
  233,
  6,
  34,
  12,
  104,
  11,
  122,
  13,
  10,
  5,
  122,
  217,
  169,
  50,
  246,
  65,
  167,
  131,
  129,
  250,
  47,
  56,
  142,
  162,
  237,
  214,
  113,
  212,
  219,
  117,
  11,
  116,
  31,
  136,
  118,
  27,
  131,
  86,
  11,
  121,
  50,
  65,
  166,
  151,
  172,
  125,
  60,
  98,
  240,
  89,
  131,
  240,
  50,
  214,
  96,
  183,
  227,
  77,
  96,
  124,
  133,
  245,
  58,
  166,
  65,
  191,
  31,
  207,
  224,
  13,
  171,
  48,
  129,
  123,
  117,
  222,
  227,
  250,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`decode filter-0 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  2,
  2,
  3,
  0,
  0,
  0,
  15,
  216,
  229,
  183,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  12,
  80,
  76,
  84,
  69,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  255,
  255,
  255,
  251,
  0,
  96,
  246,
  0,
  0,
  0,
  4,
  116,
  82,
  78,
  83,
  255,
  255,
  255,
  127,
  128,
  144,
  197,
  89,
  0,
  0,
  0,
  12,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  100,
  96,
  100,
  0,
  0,
  0,
  10,
  0,
  3,
  187,
  36,
  1,
  108,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`decode filter-1 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  16,
  0,
  0,
  0,
  0,
  6,
  129,
  249,
  107,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  203,
  73,
  68,
  65,
  84,
  120,
  156,
  165,
  148,
  65,
  14,
  131,
  32,
  20,
  68,
  253,
  88,
  9,
  93,
  186,
  51,
  30,
  193,
  51,
  120,
  255,
  155,
  224,
  186,
  27,
  99,
  252,
  108,
  138,
  164,
  77,
  149,
  8,
  124,
  166,
  179,
  133,
  76,
  152,
  151,
  23,
  168,
  105,
  158,
  153,
  24,
  147,
  62,
  91,
  87,
  235,
  163,
  240,
  112,
  72,
  246,
  10,
  81,
  185,
  128,
  180,
  198,
  6,
  16,
  217,
  144,
  7,
  58,
  96,
  223,
  5,
  19,
  202,
  3,
  178,
  5,
  18,
  2,
  204,
  173,
  49,
  58,
  145,
  174,
  75,
  157,
  104,
  173,
  212,
  235,
  147,
  63,
  7,
  48,
  131,
  16,
  183,
  77,
  192,
  64,
  242,
  2,
  231,
  146,
  87,
  100,
  8,
  189,
  72,
  195,
  128,
  75,
  100,
  237,
  178,
  64,
  12,
  190,
  18,
  193,
  12,
  152,
  139,
  5,
  50,
  2,
  206,
  121,
  145,
  250,
  30,
  151,
  8,
  20,
  137,
  47,
  1,
  32,
  254,
  36,
  2,
  33,
  158,
  9,
  36,
  10,
  164,
  18,
  5,
  145,
  166,
  9,
  151,
  8,
  250,
  145,
  206,
  18,
  65,
  12,
  152,
  139,
  5,
  114,
  137,
  142,
  180,
  227,
  136,
  75,
  4,
  136,
  20,
  15,
  168,
  22,
  233,
  42,
  17,
  0,
  49,
  38,
  112,
  83,
  80,
  35,
  81,
  16,
  105,
  158,
  113,
  137,
  170,
  69,
  138,
  37,
  58,
  242,
  6,
  128,
  163,
  150,
  92,
  96,
  194,
  242,
  148,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;
